0.9.04 (01.01.2015):
- added support for mouse gestures;
- added initial support for customizing toolbars;
- allow to load plugins on demand;
- added Go to Page dialog (F2);
- lots of other fixes and improvements.

0.9.03 (01.11.2014):
- initial version of sidebar;
- added possibility to set Otter Browser as default under Windows;
- added initial versions of Website Preferences and Quick Preferences (F12);
- added Trash to Bookmarks Manager;
- added Ctrl+Tab tabs switching;
- added option to set user style sheet;
- added tray icon;
- allow to customize menu bar (JSON file);
- various minor fixes and improvements.

0.9.02 (01.08.2014):
- added initial support for content blocking (Adblock Plus compatible);
- added Opera and HTML (Netscape) bookmarks import;
- added rocker navigation;
- added more keyboard shortcuts;
- allow to stop page loading by pressing Esc;
- no need for manual tweaking to get working binary for Windows XP (requires Qt 5.3);
- translation related improvements;
- some other fixes and minor improvements.

0.9.01 (01.06.2014):
- added application icon by Walerian Walawski;
- added error console;
- added support for additional attributes for bookmarks;
- added support for bookmark keyword;
- allow to load translations (18 languages available);
- allow to configure SSL ciphers priorities;
- allow to compile using Qt stack available in Ubuntu (outdated QtWebKit);
- various minor fixes and improvements.

0.5.01 (01.05.2014):
- added startup / crash recovery dialog;
- implemented "Reload Image" action;
- improved handling of bookmarklets;
- some other fixes and minor improvements.

0.4.01 (01.04.2014):
- added basic full screen mode support;
- User Agents configuration;
- various tab bar related fixes;
- some other fixes and changes.

0.3.01 (01.03.2014):
- added option to set custom User Agent (for single tab or whole application);
- added support for proxy auto-config (PAC);