@@ -40,7 +40,10 @@ public:
 		OpenAction,
 		SaveAction,
 		CloneTabAction,
+		PinTabAction,
+		DetachTabAction,
 		CloseTabAction,
+		CloseOtherTabs,
 		ReopenTabAction,
 		CloseWindowAction,
 		SessionsAction,
