@@ -69,7 +69,7 @@ protected:
 protected slots:
 	void optionChanged(const QString &option, const QVariant &value);
 	void currentTabChanged(int index);
-	void closeOther();
+	void closeOtherTabs();
 	void cloneTab();
 	void detachTab();
 	void pinTab();
